# coingecko-supply-api

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
configuration/: local.yaml  production.yaml  staging.yaml
docker/: Dockerfile  compose.local.yaml  compose.production.yaml  compose.staging.yaml
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/port/: mod.rs
src/application/service/: mod.rs  token_supply_service.rs
src/application/services/: mod.rs  token_supply_service.rs
src/application/use_case/: mod.rs  token_supply_use_case.rs
src/application/workers/: mod.rs  token_supply_worker.rs
src/configuration/: environment.rs  load.rs  mod.rs  server.rs
src/domain/: mod.rs
src/domain/model/: mod.rs  token.rs  token_supply.rs
src/domain/models/: mod.rs  source.rs  token.rs  token_supply.rs
src/domain/providers/: mod.rs  token_metadata_provider.rs  token_supply_provider.rs
src/domain/repositories/: mod.rs  token_supply_repository.rs
src/domain/repository/: mod.rs
src/domain/services/: mod.rs  token_supply_service.rs
src/infrastructure/: mod.rs  telemetry.rs
src/infrastructure/adapter/: mod.rs
src/infrastructure/configuration/: blockchain.rs  environment.rs  load.rs  mod.rs
src/infrastructure/contracts/: erc20.rs  mod.rs
src/infrastructure/providers/: blockchain.rs  mod.rs
src/infrastructure/repositories/: mod.rs  token_supply_repository.rs
src/infrastructure/worker/: mod.rs  (+1 more)
src/interfaces/: mod.rs
tests/http/: circulating_supply.rs  common.rs  health.rs  main.rs  total_supply.rs
(+28 files in other folders)
