[package]
name = "coingecko_supply"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.98"
alloy = { version = "0.11", features = ["full"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.18"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.10"

[dev-dependencies]
reqwest = "0.12.15"
